--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: "Open Sans", sans-serif;
-    color: #585a61;
+    color: #586160;
 }
 
 header {
@@ -19,7 +19,7 @@ header {
     z-index: 997;
     transition: all 0.5s;
     padding: 15px 0;
-    background-color: #f8f9fa;
+    background-color: rgba(177, 177, 177, 0.79);
 }
 
 header nav {
@@ -38,7 +38,7 @@ header nav h1 {
 }
 
 header nav h1 a {
-    color: #5777ba;
+    color: #57baba;
     text-decoration: none;
 }
 
@@ -53,15 +53,49 @@ header nav ul li {
 
 header nav ul li a {
     text-decoration: none;
-    color: #585a61;
+    color: #586161;
     font-family: 'Poppins', sans-serif;
+    padding: 10px;
+    transition: all .3s ease-in-out;
 }
 
 header nav ul li a:hover,
 header nav ul li a.active
 {
-    color: #5777ba;
+    color: #57baad;
+    background-color: #2e2e2e;
+    border-radius: 10px;
 }
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+}
+
+.popup-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background: #fff;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+
+
 
 .landing-page{
     display: flex;
@@ -79,7 +113,7 @@ header nav ul li a.active
     width: 250%;
     height: 200%;
     z-index: -1;
-    background-color: #e8ecf5;
+    background-color: #4adac2;
     transform: skewY(160deg);
 }
 
@@ -100,12 +134,12 @@ header nav ul li a.active
     font-size: 48px;
     font-weight: 500;
     line-height: 56px;
-    color: #5777ba;
+    color: #57bab2;
     font-family: "Poppins", sans-serif;
 }
 
 .landing-page h2{
-    color: #515f7d;
+    color: #517a7d;
     margin-bottom: 50px;
     font-size: 20px;
     font-family: 'Raleway', sans-serif;
@@ -147,13 +181,13 @@ header nav ul li a.active
     color: #0051ff;
 }
 
-.samples-container{
+.samples-container, .details-container{
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
     overflow: hidden;
-    padding: 50px 0;
+    padding: 100px 0;
 }
 
 .samples-container .s-content-container{
@@ -162,7 +196,7 @@ header nav ul li a.active
 }
 
 .samples-container .s-content-container h2{
-    color: #5777ba;
+    color: #57b3ba;
     margin: 0 0 30px;
     letter-spacing: 1.2px;
     font-size: 32px;
@@ -241,7 +275,66 @@ header nav ul li a.active
     background-color: #212529;
 }
 
+.content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1100px;
+    width: 100%;
+    height: auto;
+}
+
+.content .content-1{
+    font-family: 'Poppins', sans-serif;
+}
+
+.content .content-1 h2{
+    margin-bottom: 10px;
+    color: #4adac2;
+    font-size: 34px;
+}
+
+.content-1 p{
+    color: #586160;
+}
+
+.content-1 ul{
+    list-style: none;
+}
+
+.content-1 ul li {
+    margin: 10px 0;
+}
+
+.content-1 ul li i{
+    color: #4adac2;
+    margin-right: 10px;
+}
+
+.content-1 ul li a{
+    text-decoration: none;
+    color: #4adac2;
+}
+
 footer{
     width: 100%;
     height: 72px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+footer p, footer p a{
+    font-size: 18px;
+    line-height: 72px;
+    color: #586160;
+}
+
+footer p a{
+    text-decoration: none;
+    color: #2e62d1;
+}
+
+footer p a:hover{
+    color: #0051ff;
 }
