--- a/style.css
+++ b/style.css
@@ -66,8 +66,6 @@ header nav ul li a.active
     border-radius: 10px;
 }
 
-/* ... Existing styles ... */
-
 .popup {
     display: none;
     position: fixed;
@@ -122,7 +120,6 @@ header nav ul li a.active
     }
 }
 
-/* Additional styles for file input and selected image */
 #imageInput {
     margin-top: 10px;
 }
@@ -189,14 +186,15 @@ header nav ul li a.active
     font-size: 1.25rem;
     line-height: 1.5;
     border-radius: 0.3rem;
-    background-color: #f8f9fa;
+    border: 2px solid #212121;
+    background-color: #f8f9fab4;
     color: #212529;
     transition: all .3s ease-in-out;
 }
 
 .landing-page .get-start-btn:hover, .result-btn:hover{
     cursor: pointer;
-    background-color: #c4c4c4c4;
+    background-color: #4adac2;
     color: #fefefe;
 }
 
