--- a/style.css
+++ b/style.css
@@ -59,8 +59,7 @@ header nav ul li a {
 }
 
 header nav ul li a:hover,
-header nav ul li a.active
-{
+header nav ul li a.active {
     color: #57baad;
     background-color: #2e2e2e;
     border-radius: 10px;
@@ -97,25 +96,49 @@ header nav ul li a.active
     animation: close-anime .5s ease;
 }
 
+.actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 10px 0;
+}
+
+.upload-btn {
+    background-color: transparent;
+    border: 0.125rem dashed hsla(223, 10%, 50%, 0.4);
+    flex: 1;
+    padding: 0.375rem 2rem;
+}
+
+.upload-btn:hover {
+    background-color: hsla(223, 10%, 60%, 0.2);
+    cursor: pointer;
+}
+
 .close:hover {
     animation: close-anim .5s ease;
     cursor: pointer;
 }
 
+
+
 @keyframes close-anim {
-    from{
+    from {
         transform: rotate(0);
     }
-    to{
+
+    to {
         transform: rotate(360deg);
     }
 }
 
-@keyframes close-anime{
-    from{
+@keyframes close-anime {
+    from {
         transform: rotate(270deg);
     }
-    to{
+
+    to {
         transform: rotate(0deg);
     }
 }
@@ -132,7 +155,7 @@ header nav ul li a.active
 
 
 
-.landing-page{
+.landing-page {
     display: flex;
     align-items: center;
     position: relative;
@@ -140,7 +163,7 @@ header nav ul li a.active
     padding: 140px 0 100px 0;
 }
 
-.landing-page:before{
+.landing-page:before {
     content: '';
     position: absolute;
     right: -100%;
@@ -153,7 +176,7 @@ header nav ul li a.active
 }
 
 
-.landing-page .landing-container{
+.landing-page .landing-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -164,7 +187,7 @@ header nav ul li a.active
 }
 
 
-.landing-page h1{
+.landing-page h1 {
     margin: 0 0 10px 0;
     font-size: 48px;
     font-weight: 500;
@@ -173,14 +196,15 @@ header nav ul li a.active
     font-family: "Poppins", sans-serif;
 }
 
-.landing-page h2{
+.landing-page h2 {
     color: #517a7d;
     margin-bottom: 50px;
     font-size: 20px;
     font-family: 'Raleway', sans-serif;
 }
 
-.landing-page .get-start-btn, .popup-content .result-btn{
+.landing-page .get-start-btn,
+.popup-content .result-btn {
     text-decoration: none;
     padding: 0.5rem 1rem;
     font-size: 1.25rem;
@@ -192,32 +216,34 @@ header nav ul li a.active
     transition: all .3s ease-in-out;
 }
 
-.landing-page .get-start-btn:hover, .result-btn:hover{
+.landing-page .get-start-btn:hover,
+.result-btn:hover {
     cursor: pointer;
     background-color: #4adac2;
     color: #fefefe;
 }
 
-.landing-page .landing-container .landing-right-container img{
+.landing-page .landing-container .landing-right-container img {
     width: 650px;
     height: auto;
 }
 
-.landing-page .landing-container .landing-right-container .credits{
+.landing-page .landing-container .landing-right-container .credits {
     font-size: 12px;
     text-align: end;
 }
 
-.landing-page .landing-container .landing-right-container .credits a{
+.landing-page .landing-container .landing-right-container .credits a {
     color: #2e62d1;
     text-decoration: none;
 }
 
-.landing-page .landing-container .landing-right-container .credits a:hover{
+.landing-page .landing-container .landing-right-container .credits a:hover {
     color: #0051ff;
 }
 
-.samples-container, .details-container{
+.samples-container,
+.details-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -226,12 +252,12 @@ header nav ul li a.active
     padding: 100px 0;
 }
 
-.samples-container .s-content-container{
+.samples-container .s-content-container {
     margin: 0 0 50px;
     text-align: center;
 }
 
-.samples-container .s-content-container h2{
+.samples-container .s-content-container h2 {
     color: #57b3ba;
     margin: 0 0 30px;
     letter-spacing: 1.2px;
@@ -239,21 +265,21 @@ header nav ul li a.active
     font-weight: 400;
 }
 
-.samples-container .s-content-container p{
+.samples-container .s-content-container p {
     font-size: 18px;
 }
 
 @keyframes slide {
-    from{
+    from {
         transform: translateX(0);
     }
-    
-    to{
+
+    to {
         transform: translateX(-100%);
     }
 }
 
-.slide-wrapper{
+.slide-wrapper {
     overflow: hidden;
     width: 100%;
     padding: 60px 0;
@@ -261,28 +287,42 @@ header nav ul li a.active
     position: relative;
 }
 
-.slide-wrapper:before{
+.slide-wrapper:before,
+.slide-wrapper:after {
     content: "";
     position: absolute;
     top: 0;
-    left: 0;
     width: 250px;
     height: 100%;
-    background-color: linear-gradient(to left, rgba(255, 255, 255, 0.6), rgba(255, 0, 0, 05)    );
-    z-index: 2;
+    z-index: 99;
 }
 
-.slider{
+.slide-wrapper:before {
+    left: 0;
+    background: linear-gradient(to left, rgba(250, 250, 250, 0.7), rgb(250, 250, 250));
+    box-shadow: 10px 10px 20px rgb(0, 0, 0);
+}
+
+.slide-wrapper:after {
+    right: 0;
+    background: linear-gradient(to right, rgba(250, 250, 250, 0.7), rgb(250, 250, 250));
+}
+
+.slide-wrapper:hover .slider {
+    animation-play-state: paused;
+}
+
+.slider {
     display: inline-block;
     animation: 35s slide infinite linear;
 }
 
-.slider img{
+.slider img {
     padding: 10px;
 }
 
 
-.border-radius{
+.border-radius {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -295,7 +335,7 @@ header nav ul li a.active
     z-index: 1;
 }
 
-.slider-nav{
+.slider-nav {
     display: flex;
     column-gap: 10px;
     position: absolute;
@@ -304,11 +344,12 @@ header nav ul li a.active
     transform: translateX(-50%);
     z-index: 2;
 }
-.slider-nav span.active{
+
+.slider-nav span.active {
     background-color: #57baad;
 }
 
-.slider-nav span{
+.slider-nav span {
     width: 10px;
     height: 10px;
     border-radius: 50%;
@@ -317,12 +358,12 @@ header nav ul li a.active
     transition: opacity ease 250ms;
 }
 
-.slider-nav span:hover{
+.slider-nav span:hover {
     opacity: 1;
     background-color: #212529;
 }
 
-.content{
+.content {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -331,21 +372,21 @@ header nav ul li a.active
     height: auto;
 }
 
-.content .content-1{
+.content .content-1 {
     font-family: 'Poppins', sans-serif;
 }
 
-.content .content-1 h2{
+.content .content-1 h2 {
     margin-bottom: 10px;
     color: #4adac2;
     font-size: 34px;
 }
 
-.content-1 p{
+.content-1 p {
     color: #586160;
 }
 
-.content-1 ul{
+.content-1 ul {
     list-style: none;
 }
 
@@ -353,17 +394,17 @@ header nav ul li a.active
     margin: 10px 0;
 }
 
-.content-1 ul li i{
+.content-1 ul li i {
     color: #4adac2;
     margin-right: 10px;
 }
 
-.content-1 ul li a{
+.content-1 ul li a {
     text-decoration: none;
     color: #4adac2;
 }
 
-footer{
+footer {
     width: 100%;
     height: 72px;
     display: flex;
@@ -371,17 +412,18 @@ footer{
     align-items: center;
 }
 
-footer p, footer p a{
+footer p,
+footer p a {
     font-size: 18px;
     line-height: 72px;
     color: #586160;
 }
 
-footer p a{
+footer p a {
     text-decoration: none;
     color: #2e62d1;
 }
 
-footer p a:hover{
+footer p a:hover {
     color: #0051ff;
 }
